# autoanime

./: CLAUDE.md  README.md  pyproject.toml
src/autoanime/: anilist.py  cli.py  config.py  download_plan.py  nyaa.py  qbittorrent.py  scheduler.py  state.py
tests/: test_anilist.py  test_cli.py  test_config.py  test_download_plan.py  test_nyaa.py  test_qbittorrent.py  test_scheduler.py  test_state.py
