[project]
name = "autoanime"
version = "0.1.0"
description = "Auto-download anime episodes from Nyaa via qBittorrent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "feedparser>=6.0",
]

[project.scripts]
autoanime = "autoanime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoanime"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
